<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:textColor="#95DD10"
        android:textSize="60sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/ivPicture1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/btn_star"
        android:layout_below="@id/chronometer"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="button status"
        android:layout_below="@+id/ivPicture1"
        android:gravity="center_horizontal"
        style="@style/MyTextStyleSub"
        android:fontFamily="@font/pacifico_regular"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:text="@string/app_btn_start"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/button_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/round_btn"
            android:enabled="false"
            android:text="@string/app_btn_stop"
            android:textSize="@dimen/txt_size_small"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/round_btn"
            android:enabled="false"
            android:text="@string/app_btn_reset"
            android:textSize="@dimen/txt_size_small"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>